--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
           
               <div class="card1" style="width: 18rem;">
-                    <img class="card-img-top" src="/assets/img/punk7.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="/assets/img/auto2.jpg" alt="Card image cap">
                     <p style="font-weight: bold;font-family: Verdana, Geneva, Tahoma, sans-serif;">Best car electrical</p>
                     <button class="btn">Ver mas</button>
               </div>
