--- a/index.html
+++ b/index.html
@@ -58,42 +58,42 @@
 
           
               <div class="card1" style="width: 18rem;">
-                    <img class="card-img-top" src="/assets/img/auto2.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="./assets/img/auto2.jpg" alt="Card image cap">
                     <p style="font-weight: bold;font-family: Verdana, Geneva, Tahoma, sans-serif;">Best car electrical</p>
                     <button class="btn">Ver mas</button>
               </div>
               <div class="card2" style="width: 18rem;">
-                <img class="card-img-top" src="/assets/img/punk6.jpg" alt="Card image cap">
+                <img class="card-img-top" src="./assets/img/punk6.jpg" alt="Card image cap">
                 <p style="font-weight: bold;font-family: Verdana, Geneva, Tahoma, sans-serif;">Best car electrical</p>
                 <button class="btn">Ver mas</button>
               </div>
               <div class="card3" style="width: 18rem;">
-                <img class="card-img-top" src="/assets/img/punk1.avif" alt="Card image cap">
+                <img class="card-img-top" src="./assets/img/punk1.avif" alt="Card image cap">
                 <p style="font-weight: bold;font-family: Verdana, Geneva, Tahoma, sans-serif;">Best car electrical</p>
                 <button class="btn">Ver mas</button>
               </div>
               <div class="card4" style="width: 18rem;">
-                <img class="card-img-top" src="/assets/img/punk2.jpg" alt="Card image cap">
+                <img class="card-img-top" src="./assets/img/punk2.jpg" alt="Card image cap">
                 <p style="font-weight: bold;font-family: Verdana, Geneva, Tahoma, sans-serif;">Best car electrical</p>
                 <button class="btn">Ver mas</button>
               </div>
               <div class="card5" style="width: 18rem;">
-                <img class="card-img-top" src="/assets/img/auto4.jpg" alt="Card image cap">
+                <img class="card-img-top" src="./assets/img/auto4.jpg" alt="Card image cap">
                 <p style="font-weight: bold;font-family: Verdana, Geneva, Tahoma, sans-serif;">Best car electrical</p>
                 <button class="btn">Ver mas</button>
               </div>
               <div class="card6" style="width: 18rem;">
-                <img class="card-img-top" src="/assets/img/punk3.png" alt="Card image cap">
+                <img class="card-img-top" src="./assets/img/punk3.png" alt="Card image cap">
                 <p style="font-weight: bold;font-family: Verdana, Geneva, Tahoma, sans-serif;">Best car electrical</p>
                 <button class="btn">Ver mas</button>
               </div>
               <div class="card7" style="width: 18rem;">
-                <img class="card-img-top" src="/assets/img/punk4.webp" alt="Card image cap">
+                <img class="card-img-top" src="./assets/img/punk4.webp" alt="Card image cap">
                 <p style="font-weight: bold;font-family: Verdana, Geneva, Tahoma, sans-serif;">Best car electrical</p>
                 <button class="btn">Ver mas</button>
               </div>
               <div class="card8" style="width: 18rem;">
-                <img class="card-img-top" src="/assets/img/punk5.jpg" alt="Card image cap">
+                <img class="card-img-top" src="./assets/img/punk5.jpg" alt="Card image cap">
                 <p style="font-weight: bold;font-family: Verdana, Geneva, Tahoma, sans-serif;">Best car electrical</p>
                 <button class="btn">Ver mas</button>
               </div>
