--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <button class="btn">Ver mas</button>
               </div>
               <div class="card2" style="width: 18rem;">
-                <img class="card-img-top" src="./assets/img/punk6.jpg" alt="Card image cap">
+                <img class="card-img-top" src="assets/img/punk6.jpg" alt="Card image cap">
                 <p style="font-weight: bold;font-family: Verdana, Geneva, Tahoma, sans-serif;">Best car electrical</p>
                 <button class="btn">Ver mas</button>
               </div>
