--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!--<link rel="stylesheet" type="text/css" href="assets/css/Normalize.css">-->
+    <link rel="stylesheet" type="text/css" href="assets/css/Normalize.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -58,12 +58,12 @@
 
           
               <div class="card1" style="width: 18rem;">
-                    <img class="card-img-top" src="./assets/img/auto2.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="assets/img/auto2.jpg" alt="Card image cap">
                     <p style="font-weight: bold;font-family: Verdana, Geneva, Tahoma, sans-serif;">Best car electrical</p>
                     <button class="btn">Ver mas</button>
               </div>
               <div class="card2" style="width: 18rem;">
-                <img class="card-img-top" src="assets/img/punk6.jpg" alt="Card image cap">
+                <img class="card-img-top" src="assets/img/auto.jpg" alt="Card image cap">
                 <p style="font-weight: bold;font-family: Verdana, Geneva, Tahoma, sans-serif;">Best car electrical</p>
                 <button class="btn">Ver mas</button>
               </div>
